Enhance Main class to run Checkstyle, PMD, TestFileChecker, and SecretScanner; add ReportPrinter for formatted output